# TinyML_NPU

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md
sw/compiler/: .gitignore  README.md  pyproject.toml
sw/compiler/examples/: README.md
sw/compiler/examples/hand_written/: README.md  avgpool_2x2_single_tile.py  conv3x3_multi_tile.py  conv3x3_single_tile.py  dw3x3_single_tile.py  fc_single_tile.py  multi_layer_chain.py  pw1x1_single_tile.py
sw/compiler/examples/onnx/: README.md  compile_kws_qdq.py
sw/compiler/scripts/: README.md  check_bundle_relocation.py  check_plan_sanity.py  dump_uop_debug.py
sw/compiler/sim/: README.md  __init__.py
sw/compiler/sim/behavioral/: README.md  __init__.py  venuscore_sim.py
sw/compiler/sim/scripts/: README.md  __init__.py  run_behavioral_sim.py  run_plan_sim.py
sw/compiler/tests/: __init__.py  test_backend_avgpool.py  test_backend_conv3x3.py  test_backend_pointwise.py  test_behavioral_sim_conv.py  test_behavioral_sim_stride2.py  test_cli.py  test_dwconv_weight_packing.py  test_host_driver_relocation.py  test_host_plan_sanity.py  test_ir_basic.py  test_layout_ifm_ofm.py  test_midend_pipeline.py  test_public_artifacts.py  test_stride2_support.py  test_uop_encoder.py  test_uop_flag_semantics.py
sw/compiler/venuscore_compiler/: README.md  __init__.py  cli.py  config.py  logging_utils.py  version.py
sw/compiler/venuscore_compiler/backend/: README.md  __init__.py  codegen_uop.py  layout_ifm_ofm.py  layout_param_block.py  memory_planner.py  (+4 more)
(+128 files in other folders)
